--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div id="mini-cart">
+        
+    </div>
 <div id="goods">
 
 </div>
